--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,8 +1,30 @@
+header h1 {
+  font-size: 3rem;
+  color: rgb(119, 177, 244);
+  background-color: rgb(0, 255, 162);
+  background-size: cover;
+  padding: 20px 30px;
+  text-align: center;
+}
+
+header p {
+  font-size: 1.5rem;
+  text-align: center;
+}
+@media (max-width: 600px) {
+  header {
+    padding: 50px 30px;
+  }
+  header h1 {
+    font-size: 1.5rem;
+  }
+}
+
 iframe {
-    border: 1px solid black;
-    width: 100%;
+  border: 1px solid black;
+  width: 100%;
 }
 
 .output {
-    background: rgb(59, 235, 241);
+  background: rgb(59, 235, 241);
 }
