--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,7 +23,8 @@ header h1 {
 }
 
 p {
-  font-size: 1.5rem;
+  color: rgb(43, 135, 239);
+  font-size: 2rem;
   text-align: center;
   margin: auto;
 }
