--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,6 @@
 header h1 {
   font-size: 4rem;
-  color: rgb(119, 177, 244);
+  color: red;
   background-color: rgb(0, 255, 162);
   background-size: cover;
   padding: 20px 30px;
